# boa-restrictor

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  CHANGES.md  CLAUDE.md  CONTRIBUTING.md  MANIFEST.in  README.md  SECURITY.md  pyproject.toml
.ambient-package-update/: metadata.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
boa_restrictor/: __init__.py  main.py
boa_restrictor/cli/: configuration.py  custom_rules.py  main.py
boa_restrictor/common/: ast_utils.py  django_db.py  file_detection.py  noqa.py  rule.py
boa_restrictor/exceptions/: custom_rules.py  syntax_errors.py
boa_restrictor/projections/: occurrence.py  return_type_hints.py
boa_restrictor/rules/: __init__.py  abstract_class_inherits_from_abc.py  asterisk.py  asterisk_required.py  dataclass_kw_only.py  global_import_datetime.py  import_datetime.py  return_type_hints.py  service_class_only_one_public.py
docs/: conf.py  index.rst
docs/features/: configuration.md  disclaimer.md  rules.md
tests/cli/: test_configuration.py  test_custom_rules.py  test_main.py  test_utils.py
tests/common/: test_ast_utils.py  test_file_detection.py  test_noqa.py  test_rule.py
tests/exceptions/: test_configuration.py  test_syntax_errors.py
tests/fixtures/: custom_rule_module.py
tests/rules/: test_abstract_class_inherits_from_abc.py  test_asterisk_required.py  test_dataclass_kw_only.py  test_global_import_datetime.py  test_init.py  test_return_type_hints.py  test_service_class_only_one_public.py
(+76 files in other folders)
