[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]

[project]
name = "filename-validation"
description = "Pre-commit hook to check custom Python rules."
readme = "README.md"
keywords = ["filename validation", "pre-commit"]
license = {file = "LICENSE"}
authors = [
  {name = "Ambient Digital", email = "hello@ambient.digital"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python"
]
version = "0.1.2"

requires-python = ">=3.10"
dependencies = []
optional-dependencies.dev = ["pre-commit", "pytest"]

scripts.validate-filename = "filename_validation.cli:main" # todo

[project.urls]
Homepage = "https://github.com/stefmolin/filename-validation"
Documentation = "https://github.com/stefmolin/filename-validation"

[tool.setuptools.packages.find]
where = ["src"]

[tool.boa-restrictor]
excluded = [
#    "PBR001",
]